--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Hello World" default="Hello" basedir="."> 
   <property name="HelloText" value="Hello"/>
-  <target name="Hello">
+  <target name="test">
     <echo>${HelloText}</echo>
   </target>
 </project>
