--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Hello World" default="test" basedir="."> 
+<project name="Hello World" default="test3" basedir="."> 
   <property name="HelloText" value="Hello"/>
   <target name="test">
     <echo>${HelloText}!</echo>
   </target>
+	<target name="test3" depends="test">
+	        <junit>
+	        	 <classpath>
+	        	 	<pathelement location="hamcrest-core-1.3.jar"/>
+	        	      <pathelement location="junit-4.12.jar"/>
+	        	 	<pathelement location="bin"/>
+	        	    </classpath>
+	        	<formatter type="plain" usefile="false"/>
+	            <batchtest>
+	                <fileset dir="bin" includes="TestClass.class" />
+	            </batchtest>
+	        </junit>
+		<echo>Test OK</echo>
+	    </target>
 </project>
