--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
 	        	 	<pathelement location="bin"/>
 	        	    </classpath>
 	        	<formatter type="plain" usefile="false"/>
-	            <batchtest>
+	            <batchtest haltonfailure="true">
 	                <fileset dir="bin" includes="TestClass.class" />
 	            </batchtest>
 	        </junit>
