--- a/build.xml
+++ b/build.xml
@@ -4,16 +4,20 @@
   <target name="testinit">
     <echo>${HelloText}!</echo>
   </target>
-	<target name="test" depends="testinit">
+	 <target name="compile">
+	        <mkdir dir="build/classes"/>
+	        <javac srcdir="src" destdir="build/classes"/>
+	    </target>
+	<target name="test" depends="compile">
 	        <junit>
 	        	 <classpath>
 	        	 	<pathelement location="hamcrest-core-1.3.jar"/>
 	        	      <pathelement location="junit-4.12.jar"/>
-	        	 	<pathelement location="bin"/>
+	        	 	<pathelement location="build/classes"/>
 	        	    </classpath>
 	        	<formatter type="plain" usefile="false"/>
 	            <batchtest haltonfailure="true">
-	                <fileset dir="src" includes="TestClass.java" />
+	                <fileset dir="build/classes" includes="TestClass.class" />
 	            </batchtest>
 	        </junit>
 		<echo>Test OK</echo>
