--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk:
   -  oraclejdk7
   deploy:
-        provider: releases
+      - provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
         skip_cleanup: true
         on:
