--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: java
 jdk:
   -  oraclejdk7
-  deploy:
-      - provider: releases
-        api_key: $GITHUB_OAUTH_TOKEN
-        skip_cleanup: true
-        on:
-          tags: true
+deploy:
+   provider: releases
+   api_key: $GITHUB_OAUTH_TOKEN
+   skip_cleanup: true
+   on:
+       tags: true
